Шрифты и фон index

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,6 +10,7 @@
 @import "./components/page-header.less";
 @import "./components/header-wrapper.less";
 @import "./components/main-nav.less";
+@import "./components/page-title.less";
 @import "./components/downloads.less";
 @import "./components/page-index.less";
 @import "./components/suggests.less";
