Стилизация всех страниц

--- a/source/less/components/downloads.less
+++ b/source/less/components/downloads.less
@@ -3,14 +3,14 @@
 }
 
 .downloads__title {
-  margin-bottom: 348px;
+  margin: 0;
 }
 
 .downloads__button {
   display: block;
 
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 18px;
   text-align: center;
