Адаптивная сетка для главной страницы

--- a/source/less/components/downloads.less
+++ b/source/less/components/downloads.less
@@ -17,6 +17,10 @@
   color: #ffffff;
 
   margin-bottom: 32px;
+
+  @media (min-width: @tablet-width) {
+    text-align: left;
+  }
 }
 
 .downloads__link-wrapper {
