--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -25,6 +25,10 @@
   font-display: swap;
 }
 
+@tablet-width: 660px;
+@desktop-width: 1060px;
+@mobile-width-only: 659px;
+
 body {
   margin: 0;
   padding: 0;
