--- a/source/less/components/review.less
+++ b/source/less/components/review.less
@@ -2,7 +2,14 @@
   background-color: #ffffff;
 }
 
+.review__item {
+  display: flex;
+  flex-direction: column;
+}
+
 .review__author-name {
+  display: block;
+
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
@@ -13,4 +20,16 @@
 
 .review__text {
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    order: -1;
+  }
+}
+
+.review__author-desc {
+  text-align: center;
+
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
 }
