--- a/source/less/components/suggests.less
+++ b/source/less/components/suggests.less
@@ -24,6 +24,10 @@
   padding: 0;
 
   list-style-type: none;
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+  }
 }
 
 .suggests__item {
