--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,11 +9,13 @@
 @import "./components/page.less";
 @import "./components/page-header.less";
 @import "./components/header-wrapper.less";
+@import "./components/container.less";
 @import "./components/main-nav.less";
 @import "./components/page-title.less";
 @import "./components/downloads.less";
 @import "./components/page-index.less";
 @import "./components/suggests.less";
+@import "./components/research.less";
 @import "./components/review.less";
 @import "./components/slider.less";
 @import "./components/tariffs.less";
