--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,8 +23,7 @@
 @import "./components/page-form.less";
 @import "./components/map.less";
 @import "./components/contest.less";
-@import "./components/field-label.less";
-@import "./components/field-input.less";
+@import "./components/field.less";
 @import "./components/control.less";
 @import "./components/page-catalog.less";
 @import "./components/catalog.less";
