--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -7,6 +7,101 @@
   margin-bottom: 60px;
 }
 
+.catalog__list-wrapper {
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: 620px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+  }
+}
+
+.catalog__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-columns: 300px 300px;
+    column-gap: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 300px 300px 300px;
+  }
+}
+
+.catalog__item {
+  display: flex;
+  flex-direction: column;
+
+  width: 280px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    width: 300px;
+  }
+}
+
+.catalog__item-wrapper {
+  padding-left: 17px;
+  padding-right: 17px;
+  box-sizing: border-box;
+
+  background-color: #f2f2f2;
+}
+
+.catalog__item--panorama {
+  width: 320px;
+
+  margin: 0 auto;
+  padding: 0;
+
+  justify-content: flex-end;
+
+  @media (min-width: @tablet-width) {
+    grid-column: ~"1 / -1";
+
+    width: 660px;
+    height: 630px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+  }
+}
+
+.catalog__item--panorama .catalog__item-wrapper {
+  width: 280px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: 620px;
+    box-sizing: border-box;
+    margin: 0;
+
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+  }
+}
+
+.catalog__item--panorama .catalog__text {
+  @media (min-width: @tablet-width) {
+    order: 2;
+  }
+}
 
 .catalog__autor {
   font-style: normal;
