--- a/source/less/components/field.less
+++ b/source/less/components/field.less
@@ -1,6 +1,20 @@
 .field {
   display: flex;
   flex-direction: column;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row;
+  }
+}
+
+.field--contacts {
+  @media (min-width: @tablet-width) {
+    flex-direction: column-reverse;
+  }
+}
+
+.field--emotion {
+  flex-direction: column;
 }
 
 .field__label {
