--- a/source/less/components/page-header.less
+++ b/source/less/components/page-header.less
@@ -7,11 +7,10 @@
 
 .page-header--index {
   background-image: url("../img/bg-index-mobile.jpg");
+  background-repeat: no-repeat;
 
   margin-bottom: 46px;
   padding-bottom: 38px;
-
-  height: 733px;
 }
 
 .page-header--inset {
@@ -25,4 +24,13 @@
 
 .page-header__logo {
   fill: #ffffff;
+  display: block;
+  padding-top: 22px;
+  padding-bottom: 17px;
+  padding-left: 20px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 27px;
+    padding-bottom: 43px;
+  }
 }
