--- a/source/less/components/downloads.less
+++ b/source/less/components/downloads.less
@@ -1,13 +1,23 @@
 .downloads {
-  margin-bottom: 28px;
+  width: 280px;
+  margin: 0 auto;
 }
 
 .downloads__title {
-  margin: 0;
+  margin: 0 auto;
+  width: 225px;
+  height: 363px;
+  margin-top: 30px;
+
+  text-align: center;
 }
 
 .downloads__button {
-  display: block;
+  display: inline-block;
+  box-shadow: inset 0 0 0 3px #ffffff;
+  box-sizing: border-box;
+  border-radius: 29px;
+  width: 280px;
 
   text-decoration: none;
   font-weight: 700;
@@ -16,7 +26,9 @@
   text-align: center;
   color: #ffffff;
 
+  margin-top: 28px;
   margin-bottom: 32px;
+  padding: 21px 38px;
 
   @media (min-width: @tablet-width) {
     text-align: left;
@@ -25,9 +37,21 @@
 
 .downloads__link-wrapper {
   margin-bottom: 28px;
+  margin-left: 38px;
+  margin-right: 38px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.downloads__link {
+  display: block;
+  text-decoration: none;
+  line-height: 0;
 }
 
 .downloads__legend {
+  display: block;
   font-weight: 300;
   text-align: center;
   color: #ffffff;
