--- a/source/less/components/page-header.less
+++ b/source/less/components/page-header.less
@@ -11,6 +11,16 @@
 
   margin-bottom: 46px;
   padding-bottom: 38px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 58px;
+    padding-bottom: 119px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 77px;
+    padding-bottom: 130px;
+  }
 }
 
 .page-header--inset {
