--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,8 +14,8 @@
 // @import "./components/page-index.less";
 @import "./components/suggests.less";
 @import "./components/research.less";
+@import "./components/slider.less";
 @import "./components/review.less";
-// @import "./components/slider.less";
 @import "./components/tariffs.less";
 @import "./components/feedback.less";
 // @import "./components/page-form.less";
