--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -43,9 +43,14 @@
 
   list-style-type: none;
 
+  position: absolute;
+  width: 100%;
+
   @media (min-width: @desktop-width) {
     display: flex;
     justify-content: flex-end;
+
+    position: relative;
 
     width: 720px;
   }
@@ -55,11 +60,13 @@
   text-align: center;
   box-shadow: inset 0 -1px 0 #000000,
     inset 0 1px 0 rgba(255, 255, 255, 0.15);
+  background-color: #283645;
 
   @media (min-width: @desktop-width) {
     box-shadow: none;
     padding: 0;
     margin-right: 78px;
+    background-color: transparent;
 
     &:last-child {
       margin-right: 0;
