--- a/source/less/components/review.less
+++ b/source/less/components/review.less
@@ -1,10 +1,31 @@
 .review {
   background-color: #ffffff;
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+    margin: 0 auto;
+    position: relative;
+  }
 }
 
 .review__item {
   display: flex;
   flex-direction: column;
+
+  margin: 0 auto;
+  width: 280px;
+  padding-top: 50px;
+  box-sizing: border-box;
+
+  @media (min-width: @tablet-width) {
+    width: 620px;
+    padding-top: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 688px;
+    padding-top: 193px;
+  }
 }
 
 .review__author-name {
@@ -16,20 +37,90 @@
   line-height: 30px;
   text-align: center;
   color: #000000;
+  margin-bottom: 31px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 17px;
+    font-size: 18px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 24px;
+    margin-bottom: 17px;
+  }
 }
 
 .review__text {
   text-align: center;
+  margin: 0;
+  min-height: 204px;
 
   @media (min-width: @tablet-width) {
     order: -1;
+
+    font-size: 18px;
+
+    min-height: 124px;
   }
 }
 
 .review__author-desc {
   text-align: center;
+  line-height: 30px;
 
   @media (max-width: @mobile-width-only) {
+    display: none;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+    margin-bottom: 49px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+    margin-bottom: 41px;
+  }
+}
+
+.review__arrow {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: inline-block;
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    width: 22px;
+    height: 41px;
+    padding: 0;
+    fill: #283645;
+    opacity: 0.3;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.1;
+    }
+  }
+}
+
+.review__arrow--left {
+  left: 0;
+  top: 213px;
+}
+
+.review__arrow--right {
+  right: 0;
+  top: 213px;
+}
+
+.review__toggles {
+  padding-bottom: 39px;
+
+  @media (min-width: @desktop-width) {
     display: none;
   }
 }
