--- a/source/less/components/slider.less
+++ b/source/less/components/slider.less
@@ -6,15 +6,15 @@
   display: block;
 }
 
-td.slider__item {
-  @media (min-width: @tablet-width) {
-    display: table-cell;
-  }
-}
+// td.slider__item {
+//   @media (min-width: @tablet-width) {
+//     display: table-cell;
+//   }
+// }
 
-td.slider__item--current {
-  display: table-cell;
-}
+// td.slider__item--current {
+//   display: table-cell;
+// }
 
 .slider__toggles {
   width: 56px;
