--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,7 +19,7 @@
 @import "./components/tariffs.less";
 @import "./components/feedback.less";
 // @import "./components/page-form.less";
-// @import "./components/map.less";
+@import "./components/map.less";
 @import "./components/contest.less";
 @import "./components/field.less";
 @import "./components/control.less";
