--- a/source/less/components/development.less
+++ b/source/less/components/development.less
@@ -1,3 +1,19 @@
+.development {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
 .development__text {
+  display: block;
   line-height: 18px;
+  margin-right: 15px;
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+  }
+}
+
+.development__link {
+  line-height: 0;
 }
