--- a/source/less/components/page-footer.less
+++ b/source/less/components/page-footer.less
@@ -1,6 +1,25 @@
 .page-footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 280px;
+  margin: 0 auto;
+
   @media (min-width: @tablet-width) {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
+
+    width: 620px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+  }
+}
+
+.page-footer__logo {
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 41px;
   }
 }
