--- a/source/less/components/social.less
+++ b/source/less/components/social.less
@@ -2,6 +2,30 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+  margin-bottom: 41px;
 
   display: flex;
+}
+
+.social__item {
+  width: 54px;
+  height: 54px;
+  box-sizing: border-box;
+  border-radius: 50%;
+  border: 3px solid fade(#283645, 30%);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-right: 8px;
+
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+.social__link {
+  line-height: 0;
+  fill: #d22856;
 }
