--- a/source/less/components/tariffs.less
+++ b/source/less/components/tariffs.less
@@ -1,28 +1,40 @@
 .tariffs {
   background-color: #f2f2f2;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+
+  @media (max-width: @mobile-width-only) {
+    min-height: 380px;
+  }
 }
 
 .tariffs__table {
-  width: 100%;
+  width: 828px;
+
+  @media (max-width: @mobile-width-only) {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -414px;
+  }
 
   @media (min-width: @tablet-width) {
     width: 620px;
     margin: 0 auto;
+    margin-bottom: 70px;
   }
 
   @media (min-width: @desktop-width) {
     width: 940px;
+    margin-bottom: 100px;
   }
 }
 
 .tariffs__item-row {
   background-color: #283645;
-}
-
-.tariffs__item-cell {
-  @media (max-width: @mobile-width-only) {
-    display: none;
-  }
 }
 
 .tariffs__name {
@@ -33,8 +45,12 @@
   text-transform: uppercase;
   color: #ffffff;
 
-  margin-top: 0;
+  margin-top: 19px;
   margin-bottom: 15px;
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+  }
 }
 
 .tariffs__cost {
@@ -45,6 +61,12 @@
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
+
+  margin-bottom: 15px;
+
+  @media (min-width: @desktop-width) {
+    font-size: 24px;
+  }
 }
 
 .tariffs__item-empty {
@@ -88,19 +110,16 @@
   @media (max-width: @mobile-width-only) {
     display: none;
   }
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
+  }
 }
 
 .tariffs__option-name-value {
   padding: 25px 0 25px 20px;
 
   @media (min-width: @tablet-width) {
-    display: none;
-  }
-}
-
-.tariffs__option-value--base,
-.tariffs__option-value--unlim {
-  @media (max-width: @mobile-width-only) {
     display: none;
   }
 }
@@ -113,6 +132,9 @@
 }
 
 .tariffs__toggles {
+
+  margin-bottom: 50px;
+
   @media (min-width: @tablet-width) {
     display: none;
   }
