--- a/source/less/components/page-footer.less
+++ b/source/less/components/page-footer.less
@@ -9,12 +9,15 @@
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
     width: 620px;
+    margin-bottom: 40px;
   }
 
   @media (min-width: @desktop-width) {
     width: 940px;
+    margin-bottom: 75px;
   }
 }
 
