--- a/source/less/components/social.less
+++ b/source/less/components/social.less
@@ -2,9 +2,12 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  margin-bottom: 41px;
 
   display: flex;
+
+  @media (max-width: @mobile-width-only) {
+    margin-bottom: 41px;
+  }
 }
 
 .social__item {
@@ -22,6 +25,14 @@
 
   &:nth-child(3n) {
     margin-right: 0;
+  }
+
+  &:hover {
+    border-color: #283645;
+  }
+
+  &:active {
+    opacity: 0.3;
   }
 }
 
