--- a/source/less/components/page-title.less
+++ b/source/less/components/page-title.less
@@ -11,3 +11,22 @@
     text-align: left;
   }
 }
+
+.page-title__inset-page {
+  font-size: 24px;
+  text-align: center;
+
+  margin-top: 36px;
+  margin-bottom: 0;
+
+  @media (min-width: @tablet-width) {
+    font-size: 50px;
+    line-height: 68px;
+
+    margin-top: 81px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 74px;
+  }
+}
