--- a/source/less/components/post.less
+++ b/source/less/components/post.less
@@ -1,20 +1,31 @@
 .post {
+  background-color: #f2f2f2;
   margin: 0 auto;
-  width: 280px;
+  margin-bottom: 40px;
+  padding-bottom: 40px;
+  width: 100%;
 
   @media (min-width: @tablet-width) {
-    width: 620px;
+    padding-bottom: 54px;
+    margin-bottom: 36px;
   }
 
   @media (min-width: @desktop-width) {
     width: 940px;
+    margin-bottom: 98px;
   }
 }
 
 .post__title {
+  font-size: 14px;
   line-height: 30px;
   font-weight: 400;
   text-align: center;
+  background-color: #ffffff;
+
+  margin-top: 0;
+  margin-bottom: 20px;
+  padding: 49px 20px 52px 20px;
 }
 
 .post__form {
@@ -22,7 +33,26 @@
     display: flex;
     justify-content: space-between;
 
+    margin: 0 auto;
     margin-top: 57px;
+  }
+}
+
+.post__download {
+  display: block;
+  width: 280px;
+  margin: 0 auto;
+  margin-bottom: 42px;
+
+  @media (min-width: @tablet-width) {
+    width: 300px;
+    margin: 0;
+    margin-left: auto;
+    margin-right: 90px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 80px;
   }
 }
 
@@ -30,59 +60,138 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    margin-right: auto;
   }
 }
 
 .post__range {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding-bottom: 67px;
+  margin-bottom: 38px;
+
+  @media (max-width: @mobile-width-only) {
+    &::after {
+      content: "";
+      width: 100%;
+      height: 1px;
+      background-color: fade(#283645, 10%);
+
+      position: absolute;
+      bottom: 0;
+    }
+  }
 
   @media (min-width: @tablet-width) {
     flex-direction: column;
     margin-top: 9px;
-    margin-bottom: 67px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 124px;
   }
 }
 
-.post__button--submit {
-  color: #d22856;
-}
-
-.post__button--reset {
-  opacity: 0.1;
-}
-
 .post__toggle {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 18px;
-  border-bottom: 1px solid fade(#283645, 10%);
+  margin-right: 35px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 275px;
+    box-sizing: border-box;
+    padding-right: 18px;
+    margin-right: 0;
+    border-bottom: 1px solid fade(#283645, 10%);
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 410px;
+    padding-right: 30px;
+
+    &:last-child {
+      border: none;
+    }
+  }
+}
+
+.post__toggle-type {
+  @media (max-width: @mobile-width-only) {
+    fill: fade(#283645, 30%);
+
+    &:hover {
+      fill: fade(#283645, 50%);
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    fill: #d22856;
+  }
+}
+
+.post__toggle-type--current {
+  fill: #d22856;
+}
+
+.post__toggle-type--current + .post__toggle-line {
+  @media (max-width: @mobile-width-only) {
+    width: 240px;
+    display: block;
+    position: absolute;
+    top: 83px;
+    left: 50%;
+    margin-left: -120px;
+  }
 }
 
 .post__toggle-type--crop {
-  margin-right: 29px;
-  margin-bottom: 24px;
+  @media (min-width: @tablet-width) {
+    margin-right: 29px;
+    margin-bottom: 24px;
+  }
 }
 
 .post__toggle-type--fill {
-  margin-right: 28px;
-  margin-top: 27px;
-  margin-bottom: 23px;
+  @media (min-width: @tablet-width) {
+    margin-right: 28px;
+    margin-top: 27px;
+    margin-bottom: 23px;
+  }
 }
 
 .post__toggle-type--contrast {
-  margin-right: 32px;
-  margin-top: 26px;
-  margin-bottom: 27px;
+  @media (min-width: @tablet-width) {
+    margin-right: 32px;
+    margin-top: 26px;
+    margin-bottom: 27px;
+  }
 }
 
 .post__toggle-line {
-  width: 202px;
   height: 2px;
   background-color: #283645;
 
   position: relative;
+
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 202px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 288px;
+  }
 }
 
 .post__toggle-button {
@@ -94,6 +203,11 @@
 
   position: absolute;
   top: -6px;
+
+  &:hover,
+  &:active {
+    background-color: #d22856;
+  }
 }
 
 .post__toggle-button--crop {
@@ -111,6 +225,8 @@
 .post__buttons {
   display: flex;
   flex-direction: column;
+  width: 280px;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     width: 260px;
@@ -118,7 +234,9 @@
   }
 
   @media (min-width: @desktop-width) {
+    width: 410px;
     flex-direction: row;
+    justify-content: space-between;
   }
 }
 
@@ -131,4 +249,22 @@
   border-radius: 30px;
   background-color: transparent;
   border: 3px solid #d22856;
+
+  @media (min-width: @desktop-width) {
+    width: 183px;
+  }
+}
+
+.post__button--submit {
+  color: #d22856;
+  margin-bottom: 12px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 24px;
+  }
+}
+
+.post__button--reset {
+  border-color: #283645;
+  opacity: 0.1;
 }
