--- a/source/less/components/control.less
+++ b/source/less/components/control.less
@@ -2,3 +2,29 @@
   font-size: 18px;
   line-height: 30px;
 }
+
+
+.control--user {
+  padding-left: 60px;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 120px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 200px;
+    padding-left: 57px;
+  }
+}
+
+.control--system {
+  padding-left: 70px;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 120px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 133px;
+  }
+}
