--- a/source/less/components/page-title.less
+++ b/source/less/components/page-title.less
@@ -14,11 +14,13 @@
 
 .page-title__inset-page {
   font-size: 24px;
-  font-weight: 400;
+  font-weight: 300;
   text-align: center;
 
   margin-top: 36px;
   margin-bottom: 0;
+  padding-left: 20px;
+  padding-right: 20px;
 
   @media (min-width: @tablet-width) {
     font-size: 50px;
