--- a/source/less/components/research.less
+++ b/source/less/components/research.less
@@ -15,10 +15,16 @@
     align-items: flex-end;
     width: 620px;
     margin: 0 auto;
+
+    background-image: url("../../img/clock-tablet.svg");
+    background-repeat: no-repeat;
+    background-position: center left;
   }
 
   @media (min-width: @desktop-width) {
     width: 940px;
+
+    background-image: url("../../img/clock-desktop.svg");
   }
 }
 
