--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -1,10 +1,27 @@
+.catalog {
+  position: relative;
+}
+
 .catalog__title {
+  font-size: 14px;
   font-weight: 400;
   line-height: 30px;
   text-align: center;
 
   margin-top: 0;
   margin-bottom: 60px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+
+    width: 450px;
+    margin: 0 auto;
+    margin-bottom: 85px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 575px;
+  }
 }
 
 .catalog__list-wrapper {
@@ -27,11 +44,12 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 300px 300px;
-    column-gap: 20px;
+    gap: 20px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: 300px 300px 300px;
+    row-gap: 54px;
   }
 }
 
@@ -56,11 +74,14 @@
   box-sizing: border-box;
 
   background-color: #f2f2f2;
+
+  @media (min-width: @tablet-width) {
+    height: 155px;
+  }
 }
 
 .catalog__item--panorama {
   width: 320px;
-
   margin: 0 auto;
   padding: 0;
 
@@ -71,10 +92,12 @@
 
     width: 660px;
     height: 630px;
+    margin-bottom: 50px;
   }
 
   @media (min-width: @desktop-width) {
     width: 940px;
+    height: 602px;
   }
 }
 
@@ -100,6 +123,28 @@
 .catalog__item--panorama .catalog__text {
   @media (min-width: @tablet-width) {
     order: 2;
+  }
+}
+
+.catalog__img {
+  @media (min-width: @tablet-width) {
+    width: 300px;
+  }
+}
+
+.catalog__img--panorama {
+  @media (min-width: @tablet-width) {
+    width: 660px;
+    height: auto;
+    position: absolute;
+    top: 141px;
+    left: 50%;
+    margin-left: -330px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1200px;
+    margin-left: -600px;
   }
 }
 
