--- a/source/less/components/downloads.less
+++ b/source/less/components/downloads.less
@@ -1,4 +1,41 @@
 .downloads {
+  padding-top: 30px;
+  background-image: url("../../img/bg-index-hand-mobile.png");
+  background-repeat: no-repeat;
+  background-position: top 107px center;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/bg-index-hand-mobile@2x.png");
+    background-size: 320px auto;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-top: 114px;
+    padding-bottom: 85px;
+    background-image: url("../../img/bg-index-hand-tablet.png");
+    background-position: bottom center;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/bg-index-hand-tablet@2x.png");
+      background-size: 660px auto;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 940px;
+    margin: 0 auto;
+    padding-bottom: 130px;
+    background-image: url("../../img/bg-index-hand-desktop.png");
+    background-position: bottom center;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/bg-index-hand-desktop@2x.png");
+      background-size: 1050px auto;
+    }
+  }
+}
+
+.downloads__wrapper {
   width: 280px;
   margin: 0 auto;
 
@@ -8,13 +45,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 940px;
-    margin: 0 auto;
-  }
-}
-
-.downloads__wrapper {
-  @media (min-width: @desktop-width) {
     width: 300px;
   }
 }
@@ -23,22 +53,18 @@
   margin: 0 auto;
   width: 225px;
   height: 363px;
-  margin-top: 30px;
 
   text-align: center;
 
   @media (min-width: @tablet-width) {
-    margin-top: 102px;
     height: auto;
-    width: 195px;
+    width: auto;
 
     font-size: 40px;
     line-height: 48px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 114px;
-
     font-size: 50px;
     line-height: 68px;
   }
