--- a/source/less/components/post.less
+++ b/source/less/components/post.less
@@ -56,6 +56,12 @@
   }
 }
 
+.post__photo-link {
+  @media (min-width: @tablet-width) {
+    width: 300px;
+  }
+}
+
 .post__control-wrapper {
   @media (min-width: @tablet-width) {
     display: flex;
