Оптимизация графики всех страниц

--- a/source/less/components/contest.less
+++ b/source/less/components/contest.less
@@ -104,8 +104,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 0;
+    padding-right: 0;
     padding-bottom: 0;
   }
 }
@@ -207,7 +207,7 @@
     margin-left: auto;
     margin-right: 0;
     box-sizing: border-box;
-    padding: 61px 0 12px;
+    padding: 61px 0 66px;
   }
 }
 
@@ -229,7 +229,7 @@
 }
 
 .contest__label--system {
-  padding-bottom: 62px;
+  padding-bottom: 60px;
 
   &:last-child {
     padding-bottom: 0;
@@ -300,20 +300,7 @@
 }
 
 .contest__button {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 30px;
-  text-transform: uppercase;
-  color: #ffffff;
-
-  background-color: #2aab6d;
-
   width: 100%;
-  padding-top: 23px;
-  padding-bottom: 23px;
-  margin-bottom: 48px;
-  border: none;
-  border-radius: 1px;
 
   @media (min-width: @tablet-width) {
     width: 300px;
