--- a/source/less/components/downloads.less
+++ b/source/less/components/downloads.less
@@ -120,6 +120,23 @@
   display: block;
   text-decoration: none;
   line-height: 0;
+  width: 47px;
+  height: 56px;
+
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.downloads__link--apple {
+  background-image: url("../../img/apple-logo.svg");
+}
+
+.downloads__link--android {
+  background-image: url("../../img/android-logo.svg");
+}
+
+.downloads__link--windows {
+  background-image: url("../../img/microsoft-logo.svg");
 }
 
 .downloads__legend {
