--- a/source/less/components/field.less
+++ b/source/less/components/field.less
@@ -16,6 +16,16 @@
   padding: 12px 20px;
   margin-bottom: 15px;
 
+  &:hover {
+    border-color: #283645;
+  }
+
+  &:active,
+  &:focus-visible {
+    border-color: #d22856;
+    outline: none;
+  }
+
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
   }
