--- a/source/less/components/post.less
+++ b/source/less/components/post.less
@@ -163,6 +163,10 @@
     margin-right: 29px;
     margin-bottom: 24px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 48px;
+  }
 }
 
 .post__toggle-type--fill {
@@ -171,6 +175,10 @@
     margin-top: 27px;
     margin-bottom: 23px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 44px;
+  }
 }
 
 .post__toggle-type--contrast {
@@ -178,6 +186,10 @@
     margin-right: 32px;
     margin-top: 26px;
     margin-bottom: 27px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 54px;
   }
 }
 
