--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -62,6 +62,14 @@
     inset 0 1px 0 rgba(255, 255, 255, 0.15);
   background-color: #283645;
 
+  &:hover .main-nav__link {
+    color: #d22856;
+  }
+
+  &:active .main-nav__link {
+    color: fade(#d22856, 30%);
+  }
+
   @media (min-width: @desktop-width) {
     box-shadow: none;
     padding: 0;
@@ -70,6 +78,10 @@
 
     &:last-child {
       margin-right: 0;
+    }
+
+    &:active .main-nav__link {
+      color: fade(#ffffff, 30%);
     }
   }
 }
@@ -92,6 +104,18 @@
     line-height: 18px;
 
     padding: 48px 0;
+    position: relative;
+
+    &--current::after {
+      content: "";
+      width: 100%;
+      height: 2px;
+      position: absolute;
+      background-color: #ffffff;
+      left: 0;
+      right: 0;
+      bottom: 29px;
+    }
   }
 }
 
@@ -107,6 +131,10 @@
   position: absolute;
   right: 20px;
   top: 22px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 20px;
+  }
 
   @media (min-width: @desktop-width) {
     display: none;
