--- a/source/less/components/map.less
+++ b/source/less/components/map.less
@@ -1,4 +1,30 @@
 .map {
+  max-width: 1200px;
+  margin: 0 auto;
+
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 33px;
+    background-image: url("../../img/triangle-white-bg.svg");
+    background-position: bottom center;
+
+    @media (min-width: @tablet-width) {
+      height: 68px;
+    }
+
+    @media (min-width: @desktop-width) {
+      height: 123px;
+    }
+  }
+}
+
+.map__frame {
   display: block;
   width: 100%;
   height: 200px;
