--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,7 +18,7 @@
 @import "./components/review.less";
 @import "./components/tariffs.less";
 @import "./components/feedback.less";
-// @import "./components/page-form.less";
+@import "./components/page-form.less";
 @import "./components/map.less";
 @import "./components/contest.less";
 @import "./components/field.less";
